<resources>
    <string name="app_name">百度音乐</string>

    <string name="main_below_tv">百度音乐,听到极致</string>

    <string name="user_try_tv">随便听听</string>
    <string name="user_sd_tv">本地音乐</string>
    <string name="user_recent_tv">最近播放</string>
    <string name="user_down_tv">我的下载</string>
    <string name="user_sign1">立即登录</string>
    <string name="user_sign2">收藏的歌曲永不丢失</string>
    <string name="user_songmenu">自建歌单</string>
    <string name="user_create">新建</string>
    <string name="user_own">我的收藏</string>
    <string name="user_favourt">我喜欢的音乐</string>
    <string name="user_0song">0首</string>
    <string name="user_radio1">歌单</string>
    <string name="user_radio2">专辑</string>
    <string name="user_radio3">歌手</string>
    <string name="user_radio4">文章</string>
    <string name="user_bottom">立即登录,让音乐跟着你走</string>


    <string name="songmenu_tv">全部</string>
    <string name="songmenu_tv1">最热</string>
    <string name="songmenu_tv2">最新</string>

    <string name="find_shop">商城</string>
    <string name="fing_live">直播</string>
    <string name="find_more">更多 ></string>
    <string name="find_live_god">女神</string>
    <string name="find_live_command">推荐</string>
    <string name="find_live_kavayi">萌妹</string>
    <string name="find_live_hot">劲爆</string>
    <string name="find_live_voice">好声音</string>


    <string name="kmusic_every">大家都在唱</string>
    <string name="kmusic_my">我的K歌</string>

    <string name="recommend_tv1">歌单推荐</string>
    <string name="recommend_tv2">新碟上架</string>
    <string name="recommend_tv3">热销专辑</string>
    <string name="recommend_tv4">场景电台</string>
    <string name="recommend_tv5">今日推荐歌曲</string>
    <string name="recommend_tv6">原创歌曲</string>
    <string name="recommend_tv7">最热MV推荐</string>
    <string name="recommend_tv8">乐播节目</string>
    <string name="recommend_tv9">专栏</string>

    <string name="mylikesong">我喜欢的单曲</string>
    <string name="mysong">我的音乐</string>
    <string name="suijibofang">随机播放全部歌曲</string>
    <string name="signinnow">立即登录</string>
    <string name="denglutongbu">登陆后,自动为你同步歌曲</string>

    <string name="singer">歌手</string>
    <string name="songbind">歌曲分类</string>
    <string name="radio">电台</string>
    <string name="vipplace">VIP专区</string>



    <string name="search_edithint">歌曲,歌手,歌词,朋友,话题</string>


    <string name="sharetext">一起来听听吧</string>






</resources>
