<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/user_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_back_height"
            android:background="@mipmap/user_back" />

        <LinearLayout
            android:id="@+id/linearlayout_user_sdmusic"
            style="@style/user_clickline"
            android:layout_below="@id/user_back">

            <ImageView
                style="@style/user_clicklinear_img"
                android:src="@mipmap/ic_mymusic_local_normal" />

            <TextView
                style="@style/user_clicklinear_tv"
                android:text="@string/user_sd_tv" />

            <TextView
                style="@style/user_clicklinear_tv2"
                android:text="@string/user_0song" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/user_playbtn_width"
                android:layout_height="@dimen/user_playbtn_width"
                android:layout_gravity="center"
                android:layout_margin="@dimen/listItem_to_margintight"
                android:src="@mipmap/bofang" />

        </LinearLayout>

        <View
            style="@style/inside_view"
            android:layout_below="@id/linearlayout_user_sdmusic" />

        <TextView
            android:id="@+id/tv_user_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/linearlayout_user_sdmusic"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/user_try_tv_marginbottom"
            android:text="@string/user_try_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/user_try_tv_textsize" />

        <ImageButton
            android:id="@+id/imgbtn_user_try"
            android:layout_width="@dimen/user_try_img_width"
            android:layout_height="@dimen/user_try_img_width"
            android:layout_above="@id/tv_user_try"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/user_try_img_marginbottom"
            android:layout_marginRight="@dimen/user_try_img_marginright"
            android:background="@null"
            android:src="@drawable/userlisten" />

        <ImageView
            android:id="@+id/img_user_sign"
            android:layout_width="@dimen/user_sign_img_width"
            android:layout_height="@dimen/user_sign_img_width"
            android:layout_above="@id/linearlayout_user_sdmusic"
            android:layout_margin="@dimen/user_sign_img_margin"
            android:src="@mipmap/bt_sceneplay_singer" />

        <TextView
            android:id="@+id/tv_user_signsec"
            style="@style/user_sign_tv"
            android:layout_above="@id/linearlayout_user_sdmusic"
            android:layout_marginBottom="@dimen/user_sign_tv1_marginbelow"
            android:text="@string/user_sign2" />

        <TextView
            style="@style/user_sign_tv"
            android:layout_above="@id/tv_user_signsec"
            android:text="@string/user_sign1" />

        <LinearLayout
            android:id="@+id/linearlayout_user_recentmusic"
            style="@style/user_clickline"
            android:layout_below="@id/linearlayout_user_sdmusic">

            <ImageView
                style="@style/user_clicklinear_img"
                android:src="@mipmap/ic_mymusic_play_normal" />

            <TextView
                style="@style/user_clicklinear_tv"
                android:text="@string/user_recent_tv" />

            <TextView
                style="@style/user_clicklinear_tv2"
                android:text="@string/user_0song" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/listItem_to_width"
                android:layout_height="@dimen/listItem_to_width"
                android:layout_gravity="center"
                android:layout_margin="@dimen/listItem_to_margintight"
                android:src="@mipmap/triangle" />

        </LinearLayout>

        <View
            style="@style/inside_view"
            android:layout_below="@id/linearlayout_user_recentmusic" />


        <LinearLayout
            android:id="@+id/linearlayout_user_downloadmusic"
            style="@style/user_clickline"
            android:layout_below="@id/linearlayout_user_recentmusic">

            <ImageView
                style="@style/user_clicklinear_img"
                android:src="@mipmap/ic_mymusic_download_normal" />

            <TextView
                style="@style/user_clicklinear_tv"
                android:text="@string/user_down_tv" />

            <TextView
                style="@style/user_clicklinear_tv2"
                android:text="@string/user_0song" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/listItem_to_width"
                android:layout_height="@dimen/listItem_to_width"
                android:layout_gravity="center"
                android:layout_margin="@dimen/listItem_to_margintight"
                android:src="@mipmap/triangle" />
        </LinearLayout>

        <View
            style="@style/inside_view"
            android:layout_below="@id/linearlayout_user_downloadmusic" />

        <LinearLayout
            android:id="@+id/linearlayout_user_songmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout_user_downloadmusic"
            android:orientation="horizontal">

            <TextView
                style="@style/user_clicklinear_tv"
                android:layout_margin="@dimen/margin10"
                android:text="@string/user_songmenu" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                style="@style/user_clicklinear_tv2"
                android:layout_margin="@dimen/margin10"
                android:text="@string/user_create" />
        </LinearLayout>

        <View
            style="@style/inside_view"
            android:layout_below="@id/linearlayout_user_songmenu" />

        <RelativeLayout
            android:id="@+id/relativelayout_user_favourt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_clickliner_height"
            android:layout_below="@id/linearlayout_user_songmenu">

            <ImageView
                android:id="@+id/img_user_like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin10"
                android:src="@mipmap/ic_mymusic_like" />

            <TextView
                android:id="@+id/tv_user_like"
                style="@style/user_clicklinear_tv"
                android:layout_marginTop="@dimen/margin10"
                android:layout_toRightOf="@id/img_user_like"
                android:text="@string/user_favourt" />

            <TextView
                style="@style/user_clicklinear_tv2"
                android:layout_below="@id/tv_user_like"
                android:layout_marginTop="@dimen/margin5"
                android:layout_toRightOf="@id/img_user_like"
                android:text="@string/user_0song" />

        </RelativeLayout>

        <View
            style="@style/inside_view"
            android:layout_below="@id/relativelayout_user_favourt" />

        <TextView
            android:id="@+id/tv_user_own"
            style="@style/user_clicklinear_tv"
            android:layout_below="@id/relativelayout_user_favourt"
            android:layout_marginBottom="@dimen/margin15"
            android:layout_marginLeft="@dimen/margin10"
            android:layout_marginTop="@dimen/margin20"
            android:text="@string/user_own" />

        <RadioGroup
            android:id="@+id/radiogroup_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_own"
            android:layout_marginBottom="@dimen/margin10"
            android:orientation="horizontal">

            <RadioButton
                style="@style/user_radiobtn"
                android:text="@string/user_radio1" />

            <RadioButton
                style="@style/user_radiobtn"
                android:text="@string/user_radio2" />

            <RadioButton
                style="@style/user_radiobtn"
                android:text="@string/user_radio3" />

            <RadioButton
                style="@style/user_radiobtn"
                android:text="@string/user_radio4" />

        </RadioGroup>

        <View
            style="@style/inside_view"
            android:layout_below="@id/radiogroup_user" />

        <LinearLayout
            android:id="@+id/user_lastline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radiogroup_user"
            android:orientation="horizontal">
            <View
                android:layout_width="90dp"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/tv_user_bottomsign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_bottom"
                android:padding="@dimen/margin10"
                android:drawableLeft="@mipmap/cloud"
                />


        </LinearLayout>
        <View
            android:layout_below="@id/user_lastline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainActivty_below_height"/>


    </RelativeLayout>
</ScrollView>