<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="@dimen/find_height"
    android:background="@color/white">

    <include layout="@layout/include_mainfragment" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainfragment_tablayout_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/find_shop"
                    android:padding="@dimen/margin10"
                    android:text=" 商城"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fing_main_textsize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_more"
                    android:textColor="@color/graytext"
                    android:textSize="@dimen/user_textsize"
                    android:layout_marginRight="@dimen/margin15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_back_height"
                android:layout_marginLeft="@dimen/find_shop_picmargin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <ImageView style="@style/find_shop_pic"
                        android:id="@+id/img_find_shop1"/>

                    <ImageView style="@style/find_shop_pic"
                        android:id="@+id/img_find_shop2"/>


                    <ImageView style="@style/find_shop_pic"
                        android:id="@+id/img_find_shop3"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_find_shop1"
                        style="@style/find_shop_pic"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fing_main_smalltextsize" />

                    <TextView
                        android:id="@+id/tv_find_shop2"

                        style="@style/find_shop_pic"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fing_main_smalltextsize" />

                    <TextView
                        android:id="@+id/tv_find_shop3"

                        style="@style/find_shop_pic"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fing_main_smalltextsize" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainfragment_tablayout_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/find_live"
                    android:padding="@dimen/margin10"
                    android:text=" 直播"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fing_main_textsize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_more"
                    android:textColor="@color/graytext"
                    android:textSize="@dimen/user_textsize"
                    android:layout_marginRight="@dimen/margin15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/find_live_horlineheight"
                android:layout_marginLeft="@dimen/find_live_horpicmarginright"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/find_live_horpic"
                    android:background="@mipmap/find_god"
                    android:text="@string/find_live_god" />

                <TextView
                    style="@style/find_live_horpic"
                    android:background="@mipmap/find_voice"
                    android:text="@string/find_live_voice" />

                <TextView
                    style="@style/find_live_horpic"
                    android:background="@mipmap/fing_hot"
                    android:text="@string/find_live_hot" />

                <TextView
                    style="@style/find_live_horpic"
                    android:background="@mipmap/find_kawayi"
                    android:text="@string/find_live_kavayi" />

                <TextView
                    style="@style/find_live_horpic"
                    android:background="@mipmap/find_command"
                    android:text="@string/find_live_command" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/find_shop_picmargin"
                />
            <include layout="@layout/foot_item" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>